--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-slider": "^1.1.2",
     "@supabase/auth-helpers-nextjs": "^0.7.2",
     "@supabase/auth-helpers-react": "^0.4.0",
     "@supabase/auth-ui-react": "^0.4.2",
@@ -32,6 +33,7 @@
     "zustand": "^4.3.9"
   },
   "devDependencies": {
+    "encoding": "^0.1.13",
     "supabase": "^1.77.9"
   }
 }
